# LiveGaffer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/api/: main.py
app/api/routers/: analysis.py  matches.py
config/: __init__.py  constants.py  settings.py
data/mocks/: mock_events.json  mock_lineup.json  mock_live_fixture.json  mock_live_stats.json
src/: __init__.py
src/ai_engine/: __init__.py  base_llm_client.py  exceptions.py  gemini_client.py  groq_client.py  output_schemas.py  prompt_templates.py  tactical_analyst.py
src/core/: __init__.py  event_processor.py  formation_analyzer.py  match_state.py  momentum_engine.py
src/data_providers/: __init__.py  api_football_client.py  base_provider.py  exceptions.py  schemas.py
src/services/: analysis_service.py  cache_service.py  live_match_service.py
src/utils/: __init__.py  logger.py  rate_limiter.py
tests/: code.py
